add token project
